--- a/res/layout/channel.xml
+++ b/res/layout/channel.xml
@@ -4,207 +4,188 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#FFFFFF">
-
-    <LinearLayout
+    <FrameLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:orientation="vertical"
 		android:layout_marginLeft="0dip"
 		android:layout_marginRight="0dip"
 		android:layout_marginTop="5dip"
 		android:layout_marginBottom="5dip"	    
-		android:background="@drawable/whiteroundborder">
-	    	
-		<FrameLayout
-		  	android:id="@+id/channel_frame"		    
-		    android:layout_width="fill_parent"
-			android:layout_height="wrap_content">    
-		    <ImageView
-		        android:id="@+id/channel_icon"
-		       	android:layout_width="fill_parent" 
-		       	android:layout_height="fill_parent"
-		       	android:adjustViewBounds="true" 
-		       	android:scaleType="centerCrop"
-		        />
-		    <ImageView
-		       	android:layout_width="wrap_content" 
-		       	android:layout_height="wrap_content"	
-		       	android:layout_gravity="top|left"
-		       	android:gravity="top|left"
-		       	android:src="@drawable/upper_left_white"
-		        />		
-		    <ImageView
-		       	android:layout_width="wrap_content" 
-		       	android:layout_height="wrap_content"	
-		       	android:layout_gravity="top|right"
-		       	android:gravity="top|right"
-		       	android:src="@drawable/upper_right_white"
-		        />			            
-			<ImageView				    
-				android:layout_width="60dip"
-				android:layout_height="40dip"
-				android:layout_marginBottom="15dip"
-				android:layout_gravity="center"		
-				android:gravity="center"	
-				android:adjustViewBounds="true"
-				android:scaleType="fitXY"
-				android:src="@drawable/icon_playlist"								
-				/>			    
-		    <LinearLayout
-		        android:id="@+id/title_row"
+		android:background="@drawable/whiteroundborder">	    
+	    <LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    android:orientation="vertical">	    	
+			<FrameLayout
+			  	android:id="@+id/channel_frame"		    
+			    android:layout_width="fill_parent"
+				android:layout_height="wrap_content">    
+			    <ImageView
+			        android:id="@+id/channel_icon"
+			       	android:layout_width="fill_parent" 
+			       	android:layout_height="fill_parent"
+			       	android:adjustViewBounds="true" 
+			       	android:scaleType="centerCrop"
+			        />
+			    <ImageView
+			       	android:layout_width="wrap_content" 
+			       	android:layout_height="wrap_content"	
+			       	android:layout_gravity="top|left"
+			       	android:gravity="top|left"
+			       	android:src="@drawable/upper_left_white"
+			        />		
+			    <ImageView
+			       	android:layout_width="wrap_content" 
+			       	android:layout_height="wrap_content"	
+			       	android:layout_gravity="top|right"
+			       	android:gravity="top|right"
+			       	android:src="@drawable/upper_right_white"
+			        />			            
+				<ImageView				    
+					android:layout_width="60dip"
+					android:layout_height="40dip"
+					android:layout_marginBottom="15dip"
+					android:layout_gravity="center"		
+					android:gravity="center"	
+					android:adjustViewBounds="true"
+					android:scaleType="fitXY"
+					android:src="@drawable/icon_playlist"								
+					/>			    
+			    <LinearLayout
+			        android:id="@+id/title_row"
+				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:orientation="vertical"
+					android:layout_marginTop="10dip"
+					android:layout_gravity="bottom"	    
+					android:background="#80000000">
+				    <TextView
+					    android:id="@+id/first_episode_title"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:layout_gravity="center"
+						android:textSize="30sp"
+						android:textColor="#FFFFFF"
+						android:paddingLeft="10dip"
+						android:paddingRight="5dip"
+						android:gravity="center_vertical|left"
+						android:singleLine="true"	
+						android:ellipsize="end"	
+				    	/>			
+				    <TextView
+					    android:id="@+id/ago"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:layout_gravity="center"
+						android:layout_marginTop="-6dip"
+						android:layout_marginBottom="3dip"
+						android:textSize="18sp"
+						android:textColor="#999999"
+						android:paddingLeft="10dip"
+						android:paddingRight="5dip"
+						android:gravity="center_vertical|left"
+						android:singleLine="true"	
+						android:ellipsize="end"	
+				    	/>						    	
+				</LinearLayout>			
+			</FrameLayout>
+	    				
+			<LinearLayout
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
-			    android:orientation="vertical"
-				android:layout_marginTop="10dip"
-				android:layout_gravity="bottom"	    
-				android:background="#80000000">
-			    <TextView
-				    android:id="@+id/first_episode_title"
-					android:layout_width="fill_parent"
+				android:layout_marginLeft="5dip"		
+				android:layout_marginRight="5dip"						    	    
+			    android:orientation="horizontal"
+				android:layout_gravity="bottom">		
+			    <TextView		   
+			        android:id="@+id/channel_from_header"     
+					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:layout_gravity="center"
-					android:textSize="30sp"
-					android:textColor="#FFFFFF"
-					android:paddingLeft="10dip"
-					android:paddingRight="5dip"
-					android:gravity="center_vertical|left"
-					android:singleLine="true"	
-					android:ellipsize="end"	
-			    	/>			
-			    <TextView
-				    android:id="@+id/ago"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:layout_gravity="center"
-					android:layout_marginTop="-6dip"
-					android:layout_marginBottom="3dip"
+					android:layout_gravity="center_vertical|left"
 					android:textSize="18sp"
 					android:textColor="#999999"
-					android:paddingLeft="10dip"
-					android:paddingRight="5dip"
+					android:paddingLeft="5dip"
+					android:paddingRight="5dip"							
 					android:gravity="center_vertical|left"
 					android:singleLine="true"	
 					android:ellipsize="end"	
-			    	/>						    	
-			</LinearLayout>			
-		</FrameLayout>
-    				
-		<LinearLayout
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-			android:layout_marginLeft="5dip"		
-			android:layout_marginRight="5dip"						    	    
-		    android:orientation="horizontal"
-			android:layout_gravity="bottom">		
-		    <TextView		   
-		        android:id="@+id/channel_from_header"     
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical|left"
-				android:textSize="18sp"
-				android:textColor="#999999"
-				android:paddingLeft="5dip"
-				android:paddingRight="5dip"							
-				android:gravity="center_vertical|left"
-				android:singleLine="true"	
-				android:ellipsize="end"	
-				android:text="@string/from_uc"						
-		    	/>				
-			<ImageView
-		    	android:id="@+id/small_channel_icon"
-		        android:layout_width="70dip" 
-		        android:layout_height="70dip"
-		        android:padding="4dip"
-		        android:adjustViewBounds="true"
-		        android:scaleType="fitXY"
-		        />		
-		    <TextView		
-		        android:id="@+id/channel_name"        
-				android:layout_width="0dip"
-				android:layout_height="wrap_content"							
-				android:layout_weight="1"
-				android:layout_gravity="center_vertical|left"							
-				android:textSize="20sp"
-				android:textColor="#555555"
-				android:paddingLeft="4dip"
-				android:gravity="center_vertical|left"
-				android:singleLine="true"	
-				android:ellipsize="end"						
-		    	/>		
-			<LinearLayout
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_gravity="center"
-			    android:gravity="center"			    
-			    android:orientation="horizontal"
-				android:layout_marginLeft="4dip"							
-				android:layout_marginRight="4dip"						    
-			    android:background="@drawable/episode_number_bg">				    	
+					android:text="@string/from_uc"						
+			    	/>				
+				<ImageView
+			    	android:id="@+id/small_channel_icon"
+			        android:layout_width="70dip" 
+			        android:layout_height="70dip"
+			        android:padding="4dip"
+			        android:adjustViewBounds="true"
+			        android:scaleType="fitXY"
+			        />		
 			    <TextView		
-			        android:id="@+id/episode_count"        
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="8dip"									
-					android:layout_gravity="center_vertical|left"								
-					android:textSize="26sp"
-					android:textColor="#555555"
-					android:singleLine="true"	
-					android:gravity="center_vertical|left"							
-					android:text=""		
-					android:textStyle="bold"		
-					android:padding="2dip"		
-			    	/>	
-			    <TextView		
-			        android:id="@+id/episode_plural"        
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="2dip"						
-					android:layout_marginRight="10dip"
-					android:layout_marginBottom="3dip"
-					android:layout_gravity="bottom|left"								
+			        android:id="@+id/channel_name"        
+					android:layout_width="0dip"
+					android:layout_height="wrap_content"							
+					android:layout_weight="1"
+					android:layout_gravity="center_vertical|left"							
 					android:textSize="20sp"
-					android:textColor="#777777"		
+					android:textColor="#555555"
+					android:paddingLeft="4dip"
+					android:gravity="center_vertical|left"
 					android:singleLine="true"	
-					android:gravity="bottom|left"							
-					android:ellipsize="end"	
-					android:text=""						
-			    	/>							    	
-			 </LinearLayout>					    					        					        				    		   	           
-		</LinearLayout>    		
-	</LinearLayout>		
-    		    	<ImageView
-			    	android:id="@+id/episode1"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#FF0000"
-			        android:adjustViewBounds="true"
-			        android:scaleType="centerCrop"
-			        android:visibility="gone"
-			        />	
-			            		    	<ImageView
-			    	android:id="@+id/episode2"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#FF0000"
-			        android:adjustViewBounds="true"
-			        android:scaleType="centerCrop"
-			        android:visibility="gone"
-			        />	
-    		    	<ImageView
-			    	android:id="@+id/episode3"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#FF0000"
-			        android:adjustViewBounds="true"
-			        android:scaleType="centerCrop"
-			        android:visibility="gone"
-			        />	
+					android:ellipsize="end"						
+			    	/>		
+				<LinearLayout
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:layout_gravity="center"
+				    android:gravity="center"			    
+				    android:orientation="horizontal"
+					android:layout_marginLeft="4dip"							
+					android:layout_marginRight="4dip"						    
+				    android:background="@drawable/episode_number_bg">				    	
+				    <TextView		
+				        android:id="@+id/episode_count"        
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="8dip"									
+						android:layout_gravity="center_vertical|left"								
+						android:textSize="26sp"
+						android:textColor="#555555"
+						android:singleLine="true"	
+						android:gravity="center_vertical|left"							
+						android:text=""		
+						android:textStyle="bold"		
+						android:padding="2dip"		
+				    	/>	
+				    <TextView		
+				        android:id="@+id/episode_plural"        
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="2dip"						
+						android:layout_marginRight="10dip"
+						android:layout_marginBottom="3dip"
+						android:layout_gravity="bottom|left"								
+						android:textSize="20sp"
+						android:textColor="#777777"		
+						android:singleLine="true"	
+						android:gravity="bottom|left"							
+						android:ellipsize="end"	
+						android:text=""						
+				    	/>							    	
+				 </LinearLayout>					    					        					        				    		   	           
+			</LinearLayout>    		
+		</LinearLayout>
+		<ImageView
+	    	android:id="@+id/special_tag"
+			android:layout_width="50dip"
+			android:layout_height="50dip"			
+	        android:layout_gravity="right|top"
+	        android:gravity="right|top"
+	        android:background="#00000000"
+	        android:src="@drawable/app_tag_best_en"
+	        android:adjustViewBounds="true"
+	        android:scaleType="fitXY"
+	        android:visibility="gone"
+	        />	
+	</FrameLayout>		
 </LinearLayout>
