--- a/res/layout/store_item.xml
+++ b/res/layout/store_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"  
-	android:id="@+id/square"
-    android:orientation="vertical">       
+	android:id="@+id/square">       
     <!-- the only purpose of this inner LinearLayout is to provide a bottomMargin, which is ignored if used in the container above -->
 	<LinearLayout
 	    android:layout_width="fill_parent"
@@ -101,4 +100,16 @@
 					        
 		</LinearLayout>			
 	</LinearLayout>
-</LinearLayout>	
+    <ImageView
+    	android:id="@+id/special_tag"
+		android:layout_width="50dip"
+		android:layout_height="50dip"			
+        android:layout_gravity="right|top"
+        android:gravity="right|top"
+        android:background="#00000000"
+        android:src="@drawable/app_tag_best_en"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        />	
+</FrameLayout>	
