--- a/res/layout/signin_tablet.xml
+++ b/res/layout/signin_tablet.xml
@@ -434,7 +434,7 @@
 							android:nextFocusForward="@+id/signin_signup_button"											
 							/>											    
 					</LinearLayout>					
-			        <TextView	        
+			        <!-- TextView	        
 			            android:id="@+id/by_creating"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
@@ -447,7 +447,51 @@
 						android:textSize="18sp"
 						android:textColor="#444444"
 						android:text="@string/by_creating"								
-						/>				    								
+						/-->				    	
+					<LinearLayout
+					    android:layout_width="match_parent"
+					    android:layout_height="0dip"	    
+					    android:layout_weight="1"
+					    android:layout_marginBottom="15dip"
+					    android:background="#00000000"
+					    android:orientation="horizontal">						
+				        <TextView	        
+				            android:id="@+id/terms_button"
+				            android:layout_weight="1"
+							android:layout_width="0dip"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="5dip"
+						    android:layout_marginRight="5dip"					
+							android:layout_gravity="right|center_vertical"
+							android:gravity="right|center_vertical"
+							android:textSize="14sp"
+							android:textColor="#444444"
+							android:text="@string/termsofservice"								
+							/>	
+				        <TextView	        
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="5dip"				
+							android:layout_gravity="center"
+							android:gravity="center"
+							android:textSize="14sp"
+							android:textColor="#444444"
+							android:text="@string/middot"								
+							/>									
+				        <TextView	        
+				            android:id="@+id/privacy_button"
+				            android:layout_weight="1"
+							android:layout_width="0dip"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="5dip"
+						    android:layout_marginLeft="5dip"				
+							android:layout_gravity="left|center_vertical"
+							android:gravity="left|center_vertical"
+							android:textSize="14sp"
+							android:textColor="#444444"
+							android:text="@string/privacypolicy"								
+							/>										   
+					</LinearLayout>														
 				</LinearLayout>
 			</FrameLayout>
 						
