--- a/res/layout/signin_phone.xml
+++ b/res/layout/signin_phone.xml
@@ -392,20 +392,50 @@
 							android:nextFocusDown="@+id/sign_up_button"									
 							android:nextFocusForward="@+id/sign_up_button"									
 							/>											    
-					</LinearLayout>					
-			        <TextView	        
-			            android:id="@+id/by_creating"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="5dip"
-					    android:layout_marginLeft="20dip"
-					    android:layout_marginRight="20dip"					
-						android:layout_gravity="top"
-						android:gravity="left|center_vertical"
-						android:textSize="14sp"
-						android:textColor="#EEEEEE"
-						android:text="@string/by_creating"								
-						/>				    								
+					</LinearLayout>				
+					<LinearLayout
+					    android:layout_width="match_parent"
+					    android:layout_height="0dip"	    
+					    android:layout_weight="1"
+					    android:background="#00000000"
+					    android:orientation="horizontal">						
+				        <TextView	        
+				            android:id="@+id/terms_button"
+				            android:layout_weight="1"
+							android:layout_width="0dip"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="5dip"
+						    android:layout_marginRight="5dip"					
+							android:layout_gravity="top|right"
+							android:gravity="right|center_vertical"
+							android:textSize="14sp"
+							android:textColor="#EEEEEE"
+							android:text="@string/termsofservice"					
+							/>	
+				        <TextView	        
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="5dip"				
+							android:layout_gravity="center"
+							android:gravity="center"
+							android:textSize="14sp"
+							android:textColor="#EEEEEE"
+							android:text="@string/middot"							
+							/>									
+				        <TextView	        
+				            android:id="@+id/privacy_button"
+				            android:layout_weight="1"				            
+							android:layout_width="0dip"
+							android:layout_height="wrap_content"
+							android:layout_marginTop="5dip"
+						    android:layout_marginLeft="5dip"			
+							android:layout_gravity="top|left"
+							android:gravity="left|center_vertical"
+							android:textSize="14sp"
+							android:textColor="#EEEEEE"
+							android:text="@string/privacypolicy"								
+							/>										   
+					</LinearLayout>						 								
 					<LinearLayout
 					    android:layout_width="match_parent"
 					    android:layout_height="0dip"	    
