--- a/res/layout/terms_layer.xml
+++ b/res/layout/terms_layer.xml
@@ -59,7 +59,8 @@
 			    android:layout_weight="1"
 			    android:background="@drawable/gossamerleft"					      
 			    android:orientation="vertical">
-		        <TextView	        
+		        <TextView	
+		        	android:id="@+id/terms_tab_text"		                    
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
@@ -79,6 +80,7 @@
 			    android:background="@drawable/gossamerrightoff"					      
 			    android:orientation="vertical">
 		        <TextView	        
+		        	android:id="@+id/privacy_tab_text"			            
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_gravity="center"
