make buttons larger (too hard to hit right now)

--- a/res/layout/signin_phone.xml
+++ b/res/layout/signin_phone.xml
@@ -404,8 +404,8 @@
 				            android:layout_weight="1"
 							android:layout_width="0dip"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="5dip"
-						    android:layout_marginRight="5dip"					
+							android:paddingTop="5dip"
+						    android:paddingRight="5dip"					
 							android:layout_gravity="top|right"
 							android:gravity="right|center_vertical"
 							android:textSize="14sp"
@@ -415,7 +415,7 @@
 				        <TextView	        
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="5dip"				
+							android:paddingTop="5dip"				
 							android:layout_gravity="center"
 							android:gravity="center"
 							android:textSize="14sp"
@@ -427,8 +427,8 @@
 				            android:layout_weight="1"				            
 							android:layout_width="0dip"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="5dip"
-						    android:layout_marginLeft="5dip"			
+							android:paddingTop="5dip"
+						    android:paddingLeft="5dip"			
 							android:layout_gravity="top|left"
 							android:gravity="left|center_vertical"
 							android:textSize="14sp"
