--- a/res/layout/signin_tablet.xml
+++ b/res/layout/signin_tablet.xml
@@ -452,7 +452,6 @@
 					    android:layout_width="match_parent"
 					    android:layout_height="0dip"	    
 					    android:layout_weight="1"
-					    android:layout_marginBottom="15dip"
 					    android:background="#00000000"
 					    android:orientation="horizontal">						
 				        <TextView	        
@@ -460,18 +459,20 @@
 				            android:layout_weight="1"
 							android:layout_width="0dip"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="5dip"
-						    android:layout_marginRight="5dip"					
+							android:paddingTop="5dip"
+						    android:paddingBottom="15dip"							
+						    android:paddingRight="5dip"					
 							android:layout_gravity="right|center_vertical"
 							android:gravity="right|center_vertical"
 							android:textSize="14sp"
 							android:textColor="#444444"
-							android:text="@string/termsofservice"								
+							android:text="@string/termsofservice"							
 							/>	
 				        <TextView	        
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="5dip"				
+							android:layout_marginTop="5dip"		
+						    android:paddingBottom="15dip"									
 							android:layout_gravity="center"
 							android:gravity="center"
 							android:textSize="14sp"
@@ -483,8 +484,9 @@
 				            android:layout_weight="1"
 							android:layout_width="0dip"
 							android:layout_height="wrap_content"
-							android:layout_marginTop="5dip"
-						    android:layout_marginLeft="5dip"				
+							android:paddingTop="5dip"
+						    android:paddingBottom="15dip"
+						    android:paddingLeft="5dip"				
 							android:layout_gravity="left|center_vertical"
 							android:gravity="left|center_vertical"
 							android:textSize="14sp"
