--- a/res/layout/guide_layer.xml
+++ b/res/layout/guide_layer.xml
@@ -275,7 +275,7 @@
 					android:gravity="center"
 					android:textSize="20sp"
 					android:textColor="#000000"		
-					android:text="Back to Home"	
+					android:text="@string/back_to_home"	
 					android:padding="10dip"
 					/>					
 				<LinearLayout
@@ -293,7 +293,7 @@
 					android:gravity="center"
 					android:textSize="20sp"
 					android:textColor="#000000"		
-					android:text="Sign In"	
+					android:text="@string/si_sign_in_button"	
 					android:padding="10dip"
 					/>					    		
 			</LinearLayout>					    			    
