--- a/res/layout/top_bar.xml
+++ b/res/layout/top_bar.xml
@@ -14,16 +14,33 @@
 		<LinearLayout    
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"	  
-		    android:orientation="horizontal">   	    
-			<ImageView
-			    android:id="@+id/menubutton"						    
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="20dip"
-				android:layout_gravity="left|center_vertical"		
-				android:gravity="left|center_vertical"			
-				android:src="@drawable/icon_menu"					
-				/>
+		    android:orientation="horizontal">   	   
+			<FrameLayout  
+				android:id="@+id/menubutton"				      
+			    android:layout_width="60dip"
+			    android:layout_height="match_parent"
+			    android:layout_marginLeft="20dip">   		     
+				<ImageView					    
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="left|center_vertical"		
+					android:gravity="left|center_vertical"			
+					android:src="@drawable/icon_menu"					
+					/>
+				<TextView
+				    android:id="@+id/menu_notify_count"						    
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginLeft="8dip"
+					android:layout_marginBottom="10dip"					
+					android:layout_gravity="center"		
+					android:gravity="center"			
+					android:background="@drawable/bg_notification"
+					android:textSize="12sp"
+					android:textColor="#FFFFFF"
+					android:visibility="gone"
+					/>				
+			</FrameLayout>
 			<LinearLayout
 				android:id="@+id/search_container"
 				android:layout_weight="1"			    
