--- a/res/layout/message_layer.xml
+++ b/res/layout/message_layer.xml
@@ -49,7 +49,21 @@
 	
     <FrameLayout           
 		android:layout_width="fill_parent" 
-		android:layout_height="fill_parent">    	
+		android:layout_height="fill_parent">  
+	   	<TextView
+	    	android:id="@+id/no_new_messages"
+	        android:layout_width="wrap_content" 
+	        android:layout_height="fill_parent"
+	        android:layout_gravity="center"
+	        android:gravity="center"  	        
+	        android:paddingLeft="25dip"
+	        android:paddingRight="25dip"            
+	        android:textSize="18sp"
+	        android:textColor="#242424"
+			android:singleLine="true"
+			android:ellipsize="end"		
+			android:text="@string/no_new_messages"	        
+	        />	  		  	
 	   	<ListView
 			android:id="@+id/message_list_phone"
 			android:layout_width="fill_parent" 
