--- a/res/layout/home_page.xml
+++ b/res/layout/home_page.xml
@@ -124,6 +124,16 @@
 						</LinearLayout>		    
 					</LinearLayout>
 				</FrameLayout>		
+				<ProgressBar
+				    android:id="@+id/set_progress"          
+			    	android:layout_width="60dip"
+			    	android:layout_height="60dip"
+			    	android:layout_gravity="center"
+			    	android:gravity="center"
+			        android:padding="6dip"			    	
+			    	style="@android:style/Widget.ProgressBar.Inverse"
+			    	android:visibility="gone"
+			    	/>
 				<FrameLayout
 				    android:layout_width="fill_parent" 
 					android:layout_height="fill_parent">
@@ -151,7 +161,7 @@
 						android:cacheColorHint="@android:color/transparent"
 						android:dividerHeight="0dp"
 						android:divider="@null"
-						/>	
+						/>								
 				</FrameLayout>
 				<!-- android:cacheColorHint="@android:color/transparent" -->
 				<!-- 					android:cacheColorHint="#A0A0A0" -->
