--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,30 +14,41 @@
 	
 	    <include android:id="@+id/sliding_top_bar" layout="@layout/top_bar" />
 	    		
-	    <include layout="@layout/home_layer" android:id="@+id/home_layer" />
-	    	    	        	    			
-		<include layout="@layout/apps_layer" />
-			    
-	    <include layout="@layout/signin_layer" />
-	   
-	    <include layout="@layout/terms_layer" />
-	    	    
-	    <include layout="@layout/guide_layer" />
-
-		<include layout="@layout/store_layer" />
-
-		<include layout="@layout/search_layer" />
-
-		<include layout="@layout/message_layer" />
-				
-		<include layout="@layout/shake_layer" />
-
-		<include layout="@layout/about_layer" />
-								
-		<include layout="@layout/settings_phone" />
-									    	    	    	    		
-	</LinearLayout>
+		<FrameLayout
+	    	android:layout_width="fill_parent"
+	    	android:layout_height="fill_parent">
+ 
+		    <include layout="@layout/home_layer" android:id="@+id/home_layer" />
+		    	    	        	    			
+			<include layout="@layout/apps_layer" />
+				    
+		    <include layout="@layout/signin_layer" />
+		   
+		    <include layout="@layout/terms_layer" />
+		    	    
+		    <include layout="@layout/guide_layer" />
 	
+			<include layout="@layout/store_layer" />
+	
+			<include layout="@layout/search_layer" />
+	
+			<include layout="@layout/message_layer" />
+					
+			<include layout="@layout/shake_layer" />
+	
+			<include layout="@layout/about_layer" />
+									
+			<include layout="@layout/settings_phone" />
+						
+			<FrameLayout
+		    	android:id="@+id/invisible_mask"
+		    	android:layout_width="fill_parent"
+		    	android:layout_height="fill_parent"
+		    	android:visibility="gone"
+	    		/>				    
+    	</FrameLayout>	   	    	    	    		
+	</LinearLayout>
+		
 	<include layout="@layout/nag_layer" />
 		
 	<include layout="@layout/settings_tablet" />
