--- a/res/layout/channel.xml
+++ b/res/layout/channel.xml
@@ -79,10 +79,10 @@
 						android:layout_height="wrap_content"
 						android:layout_weight="1"
 						android:layout_gravity="center"
-						android:layout_marginTop="-6dip"
-						android:layout_marginBottom="3dip"
+						android:layout_marginTop="-4dip"
+						android:layout_marginBottom="5dip"
 						android:textSize="18sp"
-						android:textColor="#999999"
+						android:textColor="#AAAAAA"
 						android:paddingLeft="10dip"
 						android:paddingRight="5dip"
 						android:gravity="center_vertical|left"
@@ -115,8 +115,10 @@
 			    	/>				
 				<ImageView
 			    	android:id="@+id/small_channel_icon"
-			        android:layout_width="70dip" 
-			        android:layout_height="70dip"
+			        android:layout_width="32dip" 
+			        android:layout_height="32dip"
+			        android:layout_gravity="center"
+			        android:gravity="center"
 			        android:padding="4dip"
 			        android:adjustViewBounds="true"
 			        android:scaleType="fitXY"
@@ -141,7 +143,9 @@
 				    android:gravity="center"			    
 				    android:orientation="horizontal"
 					android:layout_marginLeft="4dip"							
-					android:layout_marginRight="4dip"						    
+					android:layout_marginRight="4dip"
+					android:layout_marginTop="10dip"	
+					android:layout_marginBottom="10dip"											    
 				    android:background="@drawable/episode_number_bg">				    	
 				    <TextView		
 				        android:id="@+id/episode_count"        
@@ -162,7 +166,7 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginLeft="2dip"						
-						android:layout_marginRight="10dip"
+						android:layout_marginRight="0dip"					
 						android:layout_marginBottom="2dip"
 						android:layout_gravity="bottom|left"								
 						android:textSize="20sp"
