--- a/res/layout/home_layer.xml
+++ b/res/layout/home_layer.xml
@@ -14,11 +14,68 @@
 	    android:background="#A0A0A0"
 	    android:orientation="horizontal"
 	    />
+	
+	<FrameLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="38dip"	     
+	    android:background="#00FF00"
+	    android:visibility="gone">
+		<FrameLayout
+		    android:layout_width="wrap_content"
+		    android:layout_height="match_parent"	 
+		   	android:layout_gravity="center"	  
+		   	android:gravity="center"  		        
+		    android:background="#0000FF">	    
+			<LinearLayout
+			    android:id="@+id/set_slider"
+			    android:layout_width="wrap_content"
+			    android:layout_height="match_parent"	    
+		   		android:layout_gravity="center"	  
+		   		android:gravity="center"  
+			    android:background="#FFFF00"
+			    android:orientation="horizontal"
+			    />
+			<FrameLayout
+			    android:id="@+id/set_indicator"
+			    android:layout_width="20dip"
+			    android:layout_height="6dip"	    
+		   		android:layout_gravity="bottom|left"	    
+				android:gravity="bottom|left"	   		
+			    android:background="#FF0000"
+			    />		
+		</FrameLayout>
+	</FrameLayout>
 			
 	<FrameLayout
 	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:background="#1D1D1D">
+	 	<tv.tv9x9.player.SlidingTabLayout
+	          android:id="@+id/sliding_tabs"
+	          android:layout_width="wrap_content"
+	          android:layout_height="wrap_content"
+	          android:gravity="center"
+	          android:layout_gravity="center"
+	          android:background="#1D1D1D"
+	          />
+ 	</FrameLayout>
+		   	
+	<FrameLayout
+	    android:layout_width="match_parent"
 	    android:layout_height="match_parent">
-	    
+		
+	    		    <!-- tv.tv9x9.player.SlidingTabLayout
+		        android:id="@+id/pager_header"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="top"
+		        android:background="#FFFFFF"
+		        android:paddingBottom="4dp"
+		        android:paddingTop="4dp"
+		        android:textColor="#000000" 
+		        /-->
+	    		  
+	    		        
 		<tv.tv9x9.player.StoppableViewPager
 		    xmlns:android="http://schemas.android.com/apk/res/android"
 		    android:id="@+id/homepager"			    
@@ -27,8 +84,12 @@
 		    android:layout_gravity="top|center_horizontal"
 		    android:gravity="top|center_horizontal"
 			android:scrollbarSize="0dip"
-			android:background="#FFFFFF"		    
-		    />
+			android:background="#FFFFFF">
+			
+		    <!-- android.support.v4.view.PagerTitleStrip -->
+
+		    			
+		</tv.tv9x9.player.StoppableViewPager>
 	
 		<ProgressBar
 		    android:id="@+id/home_progress"          
