--- a/res/layout-v10/splashlogo.xml
+++ b/res/layout-v10/splashlogo.xml
@@ -16,6 +16,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"				
+			android:src="@drawable/splash_generic_logo"
 			android:scaleType="fitCenter"
 			android:adjustViewBounds="true"
 			/>			
