--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,8 +38,12 @@
 	
 			<include layout="@layout/about_layer" />
 									
-			<include layout="@layout/settings_phone" />
+			<include layout="@layout/settings_phone_new" />
+
+			<include layout="@layout/password_phone" />
 						
+			<include layout="@layout/test_layer" />
+												
 			<FrameLayout
 		    	android:id="@+id/invisible_mask"
 		    	android:layout_width="fill_parent"
