--- a/res/layout/store_layer.xml
+++ b/res/layout/store_layer.xml
@@ -120,5 +120,17 @@
 				android:background="#A0000000"
 				/>	   
 		</LinearLayout>	
+		
+	    <ProgressBar
+		    android:id="@+id/store_progress"          
+	    	android:layout_width="60dip"
+	    	android:layout_height="60dip"
+	    	android:layout_gravity="center"
+	    	android:gravity="center"
+	        android:padding="6dip"			    	
+	    	style="@android:style/Widget.ProgressBar.Inverse"
+	    	android:visibility="gone"
+	    	/>	
+	    	
 	</FrameLayout>						
 </LinearLayout>
