--- a/res/layout/terms_layer.xml
+++ b/res/layout/terms_layer.xml
@@ -2,7 +2,7 @@
     android:id="@+id/termslayer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash_vice"
+    android:background="#000000"
     android:orientation="vertical"
     android:visibility="gone">
     <LinearLayout
@@ -37,7 +37,7 @@
 		android:layout_marginLeft="12dip"
 		android:layout_marginRight="6dip"
 		android:layout_gravity="center"
-		android:src="@drawable/nine_logo"						
+		android:src="@drawable/tvlogo"						
 		/>		
     <LinearLayout  
         android:id="@+id/terms_gossamer"    
