--- a/res/layout/signin_phone.xml
+++ b/res/layout/signin_phone.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash_vice"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
     <LinearLayout
         android:id="@+id/signin_back"	        
 	    android:layout_width="match_parent"
