--- a/res/layout/signin_layer.xml
+++ b/res/layout/signin_layer.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:visibility="gone">
 
-	<include layout="@layout/signin_phone" />
+	<include layout="@layout/signin_phone_new" />
 	
 	<include layout="@layout/signin_tablet" />
 		
